--- a/.travis.yml
+++ b/.travis.yml
@@ -71,7 +71,8 @@ before_script:
   - function var_search () { case "$1" in *$2*) true;; *) false;; esac; }
   - sudo dpkg --add-architecture i386
 
-  - (! var_search "${TRAVIS_SDK-}" arm || (wget https://s3.amazonaws.com/adafruit-circuit-python/gcc-arm-embedded_7-2018q2-1~xenial1_amd64.deb && sudo dpkg -i gcc-arm-embedded*_amd64.deb))
+  - (! var_search "${TRAVIS_SDK-}" arm || (wget -O gcc-arm-embedded.tar 'https://developer.arm.com/-/media/Files/downloads/gnu-rm/8-2019q3/RC1.1/gcc-arm-none-eabi-8-2019-q3-update-linux.tar.bz2' && tar -C .. -xaf gcc-arm-embedded.tar))
+  - if var_search "${TRAVIS_SDK-}" arm ; then PATH=$(readlink -f ../gcc-arm-none-eabi*/bin):$PATH; fi
 
   # For huzzah builds
   - (! var_search "${TRAVIS_SDK-}" esp8266 || (wget https://github.com/jepler/esp-open-sdk/releases/download/2018-06-10/xtensa-lx106-elf-standalone.tar.gz && tar -C .. -xaf xtensa-lx106-elf-standalone.tar.gz))
